# server

./: todo.ini  .gitignore  .yamllint.ym  .yamllint.yml  Procfile  api-docs.html  gunicorn.conf.py  manage.py  nixpacks.toml  pyproject.toml  requirements.txt  swagger.json  swagger.yaml  swagger_temp.yaml  제목 없는 다이어그램.drawio
.github/workflows/: .yamllint.yml  generate-docs.yml
activities/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
companies/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
core/: models.py
core/management/commands/: generate_swagger.py
notifications/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
products/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
search/: urls.py  views.py
users/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
