[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["devscarycat <devscarycat@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.1.5,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
pillow = ">=11.1.0,<12.0.0"
drf-yasg = ">=1.21.8,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
